# OPenGL_course_app

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  createclass  run
include/: camera.h  directionallight.h  light.h  material.h  mesh.h  model.h  oglwindow.h  pointlight.h  shader.h  spotlight.h  texture.h
res/: main.cpp  scratch.cpp
res/models/: Star Wars FALCON.mtl  star wars darth vader.mtl
res/shaders/: fragment1.shader  vertex1.shader
src/: camera.cpp  directionallight.cpp  light.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  oglwindow.cpp  pointlight.cpp  shader.cpp  spotlight.cpp  texture.cpp
